--- a/app/globals.css
+++ b/app/globals.css
@@ -286,6 +286,27 @@ html {
     transform: none !important;
   }
   
+  /* Disable all slide animations on mobile */
+  .slide-in,
+  .slide-up,
+  .slide-down,
+  .slide-left,
+  .slide-right,
+  .slideInLeft,
+  .slideInRight,
+  .slideInUp,
+  .slideInDown,
+  [class*="slide"],
+  [class*="slide-in"],
+  [class*="slide-up"],
+  [class*="slide-left"],
+  [class*="slide-right"] {
+    animation: none !important;
+    opacity: 1 !important;
+    transform: none !important;
+    transition: none !important;
+  }
+  
   .profile-image {
     animation-duration: 2s;
     transform: translateZ(0);
